# voxis

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README.md  effects-time.txt  list-effect.md  prepare-github.py  promtp.txt  pyproject.toml  test_local_audio.py
.github/workflows/: publish-pypi.yml
api/: realtime-space.js  voxis-basic-processor.js  voxis-color-time-processor.js  voxis-dynamics-processor.js  voxis-effect-registry.js  voxis-encoders-wasm.js  voxis-encoders.js  voxis-encoders.wasm  voxis-export-security.js  voxis-modern-creative-processor.js  voxis-modulation-processor.js  voxis-offline-presets.js  voxis-offline.js  voxis-realtime-catalog.js  voxis-realtime-controls.js  voxis-realtime-effects.js  voxis-realtime-player.js  voxis-realtime.js  voxis-spectral-spatial-processor.js  voxis-waveform.js
api/js/: voxis-realtime-player.js
benchmarks/: benchmark_pipeline.py
cpp/include/voxis/: dsp.hpp
cpp/src/: bindings.cpp
docs/: EFFECTS.md  EFFECT_REFERENCE.md  PYPI_RELEASE.md  REALTIME.md
page/example/1/: index.html  main.js
page/voxis/: index.html  main.js  python.html  realtime-example.html  realtime-example.js  realtime.html  style.css
page/voxis/api/: build-manifest.json  voxis-color-time-processor.js
src/voxis/: __init__.py  _analysis.py  _creative.py  _python_dsp.py  _spatial.py  _spectral.py  _util.py  audio.py  bands.py  effects.py  exceptions.py  ffmpeg.py  pipeline.py  presets.py  waveform.py
tests/: test_api_test_web.py  test_clip_ops.py  test_docs_site.py  test_effects_eleven_twelve.py  test_effects_five_six.py  test_effects_nine_ten.py  test_effects_seven_eight.py  test_effects_three_four.py  test_ffmpeg.py  test_local_audio.py  test_native_modulation.py  test_pipeline.py  test_readme.md.py  test_realtime_api_guards.py  test_realtime_web_test.py  test_waveform.py  test_web_test.py  voxis_guide.py
tmp/: ctors-test.wasm  voxis-realtime-dynamics-test.wasm
web-test/: app.py
web-test/api-test/: app.py
web-test/api-test/static/: editor.js  styles.css
web-test/api-test/static/api/: voxis-dynamics-processor.js
web-test/api-test/templates/: index.html
web-test/offline/: app.py
web-test/offline/static/: styles.css  ui.js
web-test/offline/templates/: index.html
web-test/real-time/: app.py
web-test/real-time/static/: app.js  styles.css  ui.js
web-test/real-time/static/api/: realtime-space.js  voxis-basic-processor.js  voxis-color-time-processor.js  voxis-dynamics-processor.js  voxis-encoders-wasm.js  voxis-encoders.js  voxis-export-security.js  voxis-modern-creative-processor.js  voxis-modulation-processor.js  voxis-offline-presets.js  voxis-offline.js  voxis-realtime-controls.js  voxis-realtime-dynamics.wasm  voxis-realtime-effects.js  voxis-realtime-player.js  voxis-realtime.js  voxis-spectral-spatial-processor.js  voxis-waveform.js
web-test/real-time/templates/: _basic_modals.html  _creative_modals.html  _distortion_modals.html  _dynamics_modals.html  _eq_modals.html  _extras_modals.html  _modern_modals.html  _modulation_modals.html  _pitch_time_modals.html  _space_modals.html  _spectral_modals.html  _stereo_spatial_modals.html  index.html
web-test/templates/: index.html
