[build-system]
requires = [
    "scikit-build-core>=0.11.1",
    "pybind11>=2.13.6",
]
build-backend = "scikit_build_core.build"

[project]
name = "voxis"
version = "0.0.1"
description = "Voxis is a hybrid Python + C++ audio DSP library for fast, modular effect pipelines, float32 PCM processing, multiband workflows, and FFmpeg-powered import/export."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SpiralRbx" },
]
dependencies = [
    "numpy>=2.0",
    "imageio-ffmpeg>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/spiralRbx/voxis"
Repository = "https://github.com/spiralRbx/voxis"
Issues = "https://github.com/spiralRbx/voxis/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.4",
    "twine>=5.1",
]
web = [
    "flask>=3.1",
]

[tool.scikit-build]
wheel.packages = ["src/voxis"]
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
